[metadata]
name = pytest-psqlgraph
author = Rowland Ogwara
author_email = r.ogwara@gmail.com
description = pytest plugin for testing applications that use psqlgraph
keywords = gdcdictionary, psqlgraph, graphml, mocks, testing, pytest
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/kulgan/pytest-psqlgraph
project_urls =
    source=https://github.com/kulgan/pytest-psqlgraph
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
zip_safe = True
packages = find:
package_dir =
    =src
python_requires = >=3.6
include_package_data = True
install_requires =
    attrs
    pytest >= 6.0
    psqlgml >= 0.1.2
    psqlgraph
    PyYaml
    rstr
    sqlalchemy < 1.4
    typing_extensions; python_version < '3.8'

[options.packages.find]
where = src


[options.package_data]
psqlgml =
    py.typed

[options.extras_require]
changelog =
    towncrier
dev =
    coverage[toml]
    pytest-cov
docs =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-napoleon

[options.entry_points]
pytest11 =
    psqlgraph = pytest_psqlgraph.plugin
